[package]
name = "slime_seed_finder"
version = "0.1.0"
authors = ["Badel2 <2badel2@gmail.com>"]
license = "GPL-3.0"
edition = "2021"

[package.metadata]
# Disable wasm-opt because it not works with cargo wasi
# https://github.com/bytecodealliance/cargo-wasi/issues/49
wasm-opt = false

[lib]
name = "slime_seed_finder"

[profile.release]
lto = true

[features]
base_main = ["clap", "image", "num_cpus"]
main = ["base_main", "rand"]
wasi = ["base_main"]

[dependencies]
spiral = "0.2.1"
num_cpus = { version = "1.16.0", optional = true }
clap = { version = "4.5.4", features = ["derive"], optional = true }
image = { version = "0.25.1", optional = true }
log = { version = "0.4.21", features = ["std"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", optional = false }
ndarray = "0.15.6"
rand = { version = "0.8.5", optional = true }
pretty_env_logger = "0.5.0"
sha2 = "0.10.8"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
fastanvil = "0.31.0"
fastnbt = "2.5.0"
lazy_static = "1.4.0"
flate2 = "1.0.28"
weak-alloc = "0.1.0"
cfg-if = "1.0.0"
ordered-float = "4.2.0"

[dev-dependencies]
rand = "0.8.5"

[[bin]]
name = "slime_seed_finder"
path = "src/main.rs"
required-features = ["base_main"]

[workspace]
resolver = "2"
members = [
    "slime_seed_finder_c",
    "slime_seed_finder_web",
    "slime_seed_finder_webnode",
]
