[package]
name = "slime_seed_finder_c"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "slime_seed_finder"
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

[dependencies]
slime_seed_finder = { "path" = ".." }

[build-dependencies]
cbindgen = "0.19.0"
