[package]
name = "slime_seed_finder_c"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "slime_seed_finder"
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

[features]
# TODO: need to enable all features here to make cbindgen generate bindings
default = ["image"]

[dependencies]
image = { version = "0.24.1", optional = true }
slime_seed_finder = { "path" = ".." }

[build-dependencies]
cbindgen = "0.26"
