[package]
name = "slime_seed_finder_web"
version = "0.1.0"
authors = ["Badel2 <2badel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
slime_seed_finder = { "path" = ".." }
image = { version = "0.23", default-features = false }
log = { version = "0.4.14", features = ["std"] }
wasm-logger = "0.2.0"
minecraft_screenshot_parser = "0.3"
palette = "0.6.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
zip = { version = "0.6.2", default-features = false }

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/Badel2/wasm-bindgen" }
