[package]
name = "slime_seed_finder_web"
version = "0.1.0"
authors = ["Badel2 <2badel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
slime_seed_finder = { "path" = ".." }
image = { version = "0.25.1", default-features = false, features = ["png"] }
log = { version = "0.4.21", features = ["std"] }
wasm-logger = "0.2.0"
minecraft_screenshot_parser = "0.5.0"
colorgrad = "0.6.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
wasm-bindgen-file-reader = "1.0.0"
web-sys = { version = "0.3.69", features = ["Blob", "File", "FileReaderSync"] }
js-sys = { version = "0.3.69", features = [] }
zip = { version = "0.6.6", default-features = false }
base64 = "0.22.0"
