[package]
name = "slime_seed_finder_webnode"
version = "0.1.0"
authors = ["Badel2 <2badel2@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
slime_seed_finder = { "path" = ".." }
image = { version = "0.23", default-features = false }
log = { version = "0.4.14", features = ["std"] }
minecraft_screenshot_parser = "0.3"
palette = "0.6.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
zip = { version = "0.6.2", default-features = false }
node-bindgen = { git = "https://github.com/infinyon/node-bindgen", rev = "cf382ddfa4bf0d82a8103aaa4659aec79c825010", features = ["serde-json"] }
log4rs = "1"

[build-dependencies]
node-bindgen = { git = "https://github.com/infinyon/node-bindgen", rev = "cf382ddfa4bf0d82a8103aaa4659aec79c825010", default-features = false, features = ["build"] }
